--- a/siswa.html
+++ b/siswa.html
@@ -300,7 +300,7 @@
                                                                                                                                         <p class="deskripsi">Motivasi: Semua itu butuh proses</p>
                                                                                                                                     </div>
                                                                                                                                     <div class="kartu-siswa">
-                                                                                                                                        <img src="IMG_0560 g.jpg"/>
+                                                                                                                                        <img src="tha.jpg"/>
                                                                                                                                         <div class="kolom1">
                                                                                                                                             <p class="deskripsi">Nama: Thalita Rizki Natania</p>
                                                                                                                                             <p class="deskripsi">TTL: Kebumen, 30 Maret 2007</p>
