--- a/struktur.html
+++ b/struktur.html
@@ -78,7 +78,7 @@
                                                     </div>
                                                     <div class="siswa-list">
                                                         <div class="kartu-siswa">
-                                                            <img src="IMG_0560 g.jpg"/>
+                                                            <img src="tha.jpg"/>
                                                             <div class="kolom1">
                                                                 <p class="deskripsi">Nama:Thalita Rizki Natania</p>
                                                                 <p class="deskripsi">Sebagai:Bendahara Kelas 2</p>
