--- a/siswa.html
+++ b/siswa.html
@@ -163,7 +163,7 @@
                                                                         <p class="deskripsi">Nama: Firman Harun Al Khudori</p>
                                                                         <p class="deskripsi">TTL: Kebumen, 20 Desember 2006</p>
                                                                         <p class="deskripsi">No Absen: 12</p>
-                                                                        <p class="deskripsi">Instagram: @mannn_pokee</p>
+                                                                        <p class="deskripsi">Instagram: @firmanhrnn</p>
                                                                         <p class="deskripsi">Motivasi: Mengagumi untuk menjadi motivasi, jika beruntung sampai memiliki</p>
                                                                         <p class="deskripsi">Lanjut Ke: Paket 6</p>
                                                                     </div>
